--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web devolaper poftfalio</title>
+   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-        <header></header>
+        <header>
+                        <nav>
+                               <h2 class="nav_title">SE<span class="primary_color">LI</span>NA</h2>
+                            <ul>
+                                    <li><a href="Home.html">Home</a></li>
+                                    <li><a href="Audio.html">Audio</a></li>
+                                    <li><a href="Video.html">Video</a></li>
+                                    <li>
+                                        <button class="btn_primary">Hare Me</button>
+                                    </li>
+                            </ul>
+                        </nav>
+        </header>
         <body>
 
         </body>
         <footer>
-            
+
         </footer>
     
 </body>
