--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-        <header>
+        <header class="header">
                         <nav>
                                <h2 class="nav_title">SE<span class="primary_color">LI</span>NA</h2>
                             <ul>
@@ -24,6 +24,17 @@
                                     </li>
                             </ul>
                         </nav>
+                        <div class="banner">
+                                    <div>
+                                            <h2 class="banner_getting">Hi i am </h2>
+                                            <h3 class="banner_title">Selina Gomez</h3>
+                                            <P>Hellow i am selina Gomez, I am happy for you suppor and <br>you must be happy for my song and modeling.</P>
+                                            <button class="btn_primary">Dwonload Song</button>
+                                            <button class="btn_primary">Contract</button>
+
+                                    </div>
+                                    <img class="profile_pic" src="image/sl01.jpg"/>
+                        </div>
         </header>
         <body>
 
