--- a/index.html
+++ b/index.html
@@ -28,16 +28,47 @@
                                     <div>
                                             <h2 class="banner_getting">Hi i am </h2>
                                             <h3 class="banner_title">Selina Gomez</h3>
-                                            <P>Hellow i am selina Gomez, I am happy for you suppor and <br>you must be happy for my song and modeling.</P>
+                                            <P class="discription">Hellow i am selina Gomez, I am happy for you suppor and <br>you must be happy for my song and modeling.</P>
                                             <button class="btn_primary">Dwonload Song</button>
                                             <button class="btn_primary">Contract</button>
 
                                     </div>
-                                    <img class="profile_pic" src="image/sl01.jpg"/>
+                                    <img class="profile_pic" src="image/sl02.jpg"/>
                         </div>
         </header>
-        <body>
+        
+                <main>
+                        <section class="about">
+                                    <h2 class="abouthead">About me</h2>
+                                    <p class="aboutdp">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Ipsum voluptatibus,
+                                        abo mollitia, alias id modi culpa error obcaecati! Molestiae, dolorum.</p>
+                                        <div class="about-info-container">
+                                                <div class="aboutinfo">
+                                                    <h4 class="info-title">Name</h4>
+                                                    <p> Selina Gomez</p>
+                                                </div>
+                                                <div class="aboutinfo">
+                                                    <h4 class="info-title">Email</h4>
+                                                    <p>info420@gmail.com</p>
+                                                </div>
+                                                <div class="aboutinfo">
+                                                    <h4 class="info-title">Date of brith</h4>
+                                                    <p>12th Jan 1995</p>
+                                                </div>
+                                                <div class="aboutinfo">
+                                                    <h4 class="info-title">Form</h4>
+                                                    <p>Florida USA</p>
+                                                </div>
+                                        </div>
+                        </section> <!--section one end--><!--section one end--><!--section one end--><!--section one end--><!--section one end-->
 
+                        <section class="about">
+                                <h3 class="section-titlte">What i Do</h3>
+                                <p class="section-discripyion">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Ipsum voluptatibus,
+                                    abo mollitia, alias id modi culpa error obcaecati! Molestiae, dolorum.</p>
+                        </section>
+
+                </main>
         </body>
         <footer>
 
